# ped

./: Cargo.toml  buffer.go  build.zig  build.zig.zon  go.mod  main.go  ped.go  state.go
.claude/: settings.local.json
src/: buffer.rs  commands.rs  config.rs  main.rs  main.zig
