[package]
name = "ped"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.100"
etcetera = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
